--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,5 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  url: redis://redistogo:44ba9f62725e6f7e976261b211858b7f@pike.redistogo.com:11060/
   channel_prefix: message_me_production
